objects/Apttus_DocuApi__DocuSignCalloutTransient__c.object
<CustomObject>
    <description>Temporary storage of system use object. It will not be used to store any data for end user consumption. System use only.</description>
    <fields>
        <fullName>Apttus_DocuApi__BatchApexJobType__c</fullName>
        <description>This filed defines what kind of job should use this record.
Like Upload attachments docs or download and attach documents to parent.</description>
        <inlineHelpText>This filed defines what kind of job should use this record.
Like Upload attachments docs or download and attach documents to parent.</inlineHelpText>
        <label>Batch Apex Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upload Documents</fullName>
                </value>
                <value>
                    <fullName>Download Completed Documents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__EnvelopeId__c</fullName>
        <description>Envelop id saved here to Batch Apex use Upload attachments and Download completed signed documents</description>
        <inlineHelpText>Envelop id saved here to Batch Apex use Upload attachments and Download completed signed documents</inlineHelpText>
        <label>Envelope Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__TransientData__c</fullName>
        <description>system data</description>
        <inlineHelpText>system data</inlineHelpText>
        <label>Transient Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>DocuSign Callout Transient</label>
    <nameField>
        <label>DocuSign Callout Transient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Callout Transients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>